@@ -80,9 +80,11 @@ class TestScriptFile(scripts_utils.TestScriptsBase, test_utils.TestCase):
         imp1.identify = mock.MagicMock(return_value=True)
         imp1.file_account = mock.MagicMock(return_value=account)
         imp1.file_date = mock.MagicMock(return_value=None)
+        imp1.file_name = mock.MagicMock(return_value=None)
         imp2 = mock.MagicMock()
         imp2.identify = mock.MagicMock(return_value=True)
         imp2.file_account = mock.MagicMock(return_value=account)
+        imp2.file_name = mock.MagicMock(return_value=None)
         file.file([imp1, imp2], self.downloads, self.documents, mkdirs=True)
         self.assertEqual(3, move_mock.call_count)
         self.assertEqual(0, error_mock.call_count)
